Use API of Component#translatable instead.